# ontologizer

./: .gitignore  Cargo.toml  README.md  config.json  config.py  daniel.py
examples/: generate_config.py
examples/fly/: population_genes_fly.txt  solution_fly.tsv  study_genes_fly.txt
examples/go0090717/: config.json
examples/human/: SRP247679_239-pop_genes.txt  SRP247679_239-study_genes.txt  SRP247679_239_config.json  config_bayesian.json  config_frequentist.json  go0090717_config.json  go0090717_pop_genes.txt  solution_human.tsv
examples/mouse/: population_genes_mouse.txt  solution_mouse.tsv  study_genes_mouse.txt
examples/rat/: population_genes_rat.txt  solution_rat.tsv  study_genes_rat.txt
examples/yeast/: config.json  config_bayesian.json  config_frequentist.json  gkq045_nar-02562-s-2009-File009.txt  gkq045_nar-02562-s-2009-File010.txt  population_genes.txt  population_genes_yeast.txt  solution_yeast.tsv  study_genes_yeast.txt  yeast_config.json  yeast_study_genes.txt
scripts/: config.py
src/: annotations.rs  bayesian.rs  core.rs  frequentist.rs  gene_set.rs  geneset.rs  hypergeom.rs  lib.rs  main.rs  ontologizer.rs
src/bayesian/: algorithm.rs  analysis.rs  mcmc.rs  measure.rs  mgsa.rs  mod.rs  model.rs  probs.rs  proposer.rs  recorder.rs  run.rs  sampler.rs  state.rs  types.rs  utils.rs
src/better_bayesian/: algorithm.rs  metropolis_hastings.rs  mod.rs  model.rs  observation.rs  probability.rs  proposer.rs  recorder.rs  state.rs
src/calculation/: mod.rs  pvalue_calculation.rs  results.rs  term_for_term.rs
src/core/: annotations.rs  genes.rs  geneset.rs  mod.rs  ontology.rs  result.rs  util.rs
src/frequentist/: algorithm.rs  analysis.rs  background.rs  correction.rs  distribution.rs  hypergeo.rs  hypergeom.rs  hypergeometric.rs  measure.rs  mod.rs  results.rs  run.rs  term_for_term.rs  test.rs  topology.rs
src/frequentist/mtc/: bonferroni.rs  bonferroni_holm.rs  mod.rs  none.rs
src/mgsa/: mgsa.rs  mod.rs
src/statistics/: bonferroni.rs  bonferroni_holm.rs  mod.rs  mtc.rs  none.rs
tests/: end_to_end_yeast.rs
tests/data/GO0090717/: population.txt  results.csv
tests/data/GO:0090717/: study.txt
tests/data/GOnone/: population.txt  study.txt
