[package]
name = "ontologizer"
version = "0.1.1"
edition = "2024"
keywords = ["Ontologizer", "Gene_Ontology", "Enrichment_Analysis"]
description = "todo"
license = "MIT"
readme = "README.md"


[lib]
name = "ontologizer"
path = "src/lib.rs"


[[bin]]
name = "ontologizer"
path = "src/main.rs"


[dependencies]
csv = "1.4.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
ontolius = "0.5.4"
oboannotation = { git = "https://github.com/P2GX/oboannotation.git", tag = "v0.1.2" }
float_eq = "1.0.1"
indexmap = "2.11.3"
rand = "0.10.0"
rand_distr = "0.6.0"
flate2 = "1.1.9"
ureq = "3.2.0"
chrono = "^0.4"

[dev-dependencies]
rstest = "0.26.1"

[profile.release]
debug = true


